# mnist_loader

./: CMakeLists.txt  README.rst
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/mnist_loader/: mnist_reader.hpp  mnist_reader_common.hpp  mnist_reader_less.hpp  mnist_utils.hpp
